// World contains generic data about the world, like size and age.

//Tile gives information about single tile insde a room
message tileMsg {
	required int32 visual = 6;
	required bool blocks = 12;
	required int32 hp = 13;
}

//Room contains room specific information
message roomMsg {
	required int32 roomType = 3;
	required int32 posX = 5;
	required int32 posY = 6;
	required int32 posZ = 7;

	repeated tileMsg tiles = 10;
}

message worldMsg {
	required int32 age = 1; //How many turns old the world is

	repeated roomMsg rooms = 11;
}
